@@ -1,5 +1,14 @@
 Update to V0.5.7.0
 
+Update the database in case of MySQL database
+
+To update the database please use the little sql script provided with
+this update. The script update-0.5.5.x-to-0.5.6.0.sql updates the MySQL
+database.
+   
+For PostgreSQL and Oracle change the database update script according to
+your needs.
+
 Version 0.5.7.0 was cleaned up. Unused files have been deleted. If you do not use the RPM
 installer please take care about the deleted files yourself.
 
@@ -12,12 +21,12 @@ SVN Access Manager together with PHP 7 and keep me updated.
  
 There's also a fix for the installer included. MySQLi is now available as database type.
 If you already installed SVN Access Manager this fix is not needed. If you want to use
-the mysqlu driver instead of the mysql driver please update your config.inc.php file
-accordimgsly and use 'mysqli' for database_type.
-
-
+the mysqli driver instead of the mysql driver please update your config.inc.php file
+accordingsly and use 'mysqli' for database_type.
 
 #-------------------------------------------------------------------------------------------#
+
+
 
 Update to V0.5.6.6
 
