@@ -1,0 +1,2 @@
+ALTER TABLE `svn_access_rights` CHANGE `user_id` `user_id` INT(10) NOT NULL DEFAULT '0';
+ALTER TABLE `svn_access_rights` CHANGE `group_id` `group_id` INT(10) NOT NULL DEFAULT '0';
